src/styles/common/_mixins.scss
/* ... */
@mixin bg-main {
  background-image:
    linear-gradient(180, rgba(0, 0, 0, 0) 30%, rgba(255, 255, 255, 1) 35%),
    url(../../assets/img/overlay.png), url(../../assets/img/noize.png);

  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 13.46%, #0d0d0d 100%);
  background-blend-mode: normal, overlay;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

@mixin bg-image {
  background-image: url(../../assets/img/overlay.svg);
  background-blend-mode: normal, overlay;
  background-size: cover;
  background-position: right top;
  background-repeat: no-repeat;
}

@mixin bg-image-65 {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),
    url(../../assets/img/overlay.png);
  background-blend-mode: normal, overlay;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
@mixin bg-image-80 {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
    url(../../assets/img/overlay.png);
  background-blend-mode: normal, overlay;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

@mixin bg-overlay($opacity: 0.1) {
  position: relative;

  &::after {
    content: "";
    position: absolute;
    inset: 0;
    pointer-events: none;

    background-image:
      linear-gradient(rgba(0, 0, 0, $opacity), rgba(0, 0, 0, $opacity)),
      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200' preserveAspectRatio='none'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.75' numOctaves='3' result='noise'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0'/%3E%3C/filter%3E%3Crect width='200' height='200' filter='url(%23noise)' opacity='0.15'/%3E%3C/svg%3E");

    background-size:
      cover,
      200px 200px;
    background-repeat: no-repeat, repeat;
  }
}

@mixin item-marked {
  position: relative;
  padding-left: 60px;
  min-height: 33px;
  color: white;
  @include text-body-base;

  @media (max-width: 991px) {
    padding-left: 38px;
  }

  &::before {
    content: "";
    position: absolute;
    left: 0;
    top: 2px;
    width: 30px;
    height: 30px;
    background-image: url("../../assets/img/mark.svg");
    background-size: contain;
    background-repeat: no-repeat;

    @media (max-width: 991px) {
      width: 22px;
      height: 22px;
    }
  }
}

@mixin item-marked-alt {
  position: relative;
  padding-left: 36px;
  min-height: 24px;
  color: white;
  @include text-body-base;

  @media (max-width: 991px) {
    padding-left: 38px;
  }

  &::before {
    content: "";
    position: absolute;
    left: 0;
    top: 2px;
    width: 28px;
    height: 28px;
    background-image: url("../../assets/img/bullet-alt.svg");
    background-size: contain;
    background-repeat: no-repeat;
  }
}

@mixin gradient-text {
  @include text-body-base;
  background: $primary-gradient;
  background-clip: text;
  color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: all 0.3s ease;
}

@mixin gradient-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  @include text-button;
  padding: 12px 40px;
  border-radius: 100px;
  position: relative;
  border: none;
  background: none;
  z-index: 1;
  color: white;

  &:hover {
    color: var(--color-black, #000);

    &::after {
      background-image: none;
    }
  }

  &::before {
    content: "";
    position: absolute;
    top: -1px;
    left: -1px;
    right: -1px;
    bottom: -1px;
    background: $primary-gradient;
    z-index: -1;
    border-radius: 100px;
  }

  &::after {
    content: "";
    position: absolute;
    top: 1px;
    left: 1px;
    right: 1px;
    bottom: 1px;
    background-image:
      linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
      linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)),
      url(../../assets/img/overlay.png);
    background-blend-mode: normal, overlay;
    border-radius: 100px;
    z-index: -1;
  }
}

@mixin generate-z-index($count: 10) {
  @for $i from 1 through $count {
    &:nth-child(#{$i}) {
      z-index: $i;
    }
  }
}

@mixin ul-main {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 30px;
}

@mixin hide-scrollbar {
  /* Firefox */
  scrollbar-width: none;

  /* IE 10+ */
  -ms-overflow-style: none;

  /* Chrome, Safari, Edge */
  &::-webkit-scrollbar {
    display: none;
  }
}

@mixin scroll-fade-overlay($height: 40px) {
  &::after {
    content: "";
    position: absolute;
    bottom: -1px;
    left: 0;
    width: 100%;
    height: $height;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
    pointer-events: none;

    @media (max-width: 991px) {
      content: none;
    }
  }
}

